May 5, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * gui/DebugMemory.c: Show 0x7f as dots.

May 2, 2010 edgbla <edgbla@yandex.ru>

 * libpcsxcore/psxcounters.h: Root counters code was written from scratch.
 * libpcsxcore/psxcounters.c: Likewise.
 * libpcsxcore/psxhw.c: Likewise.
 * libpcsxcore/misc.c: Likewise.
 * libpcsxcore/ix86/iR3000A.c: Likewise.
 * libpcsxcore/ix86_64/iR3000A-64.c: Likewise.
 * libpcsxcore/ppc/pR3000A.c: Likewise.

April 30, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * Mass update to the copyright headers. Fixed typo in FSF's address,
   Removed obsolete URL. (No real change :) )

April 24, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * win32/pcsx.rc: Don't include afxres.h, which doesn't exist in MSVC
   2010 Express.

April 18, 2010 edgbla <edgbla@yandex.ru>

 * po/ru_RU.po: Updated.

April 17, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * po/ru_RU.po: Added Russian translation by edgbla.
 * po/update-pot.sh: Added ru_RU.po.
 * po/LINGUAS: Likewise.
 * AUTHORS: Updated info.

April 16, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/peopsxgl/soft.c: Applied the same fix by edgbla as dfxvideo.
 * libpcsxcore/gte.c: Use integer math for division operations.

April 15, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfsound/freeze.c: Fixed the sound doesn't always play properly
   after loading the state. (Thanks edgbla)
 * libpcsxcore/psxmem.c: Fixed KKND freeze at startup. (edgbla)
 * libpcsxcore/gte.c: Fixed gteDCPL. (edgbla)
 * AUTHORS: Updated info.

April 14, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/gte.c: Use u32 instead of unsigned long.
 * COPYING: Fixed a typo in FSF's address.
 * plugins/dfxvideo/soft.c: Army Man invisible bullets fix (courtesy of
   edgbla).
 * AUTHORS: Updated info.
 * data/pcsx.glade2: Likewise.

April 13, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/gte.c: Backported the new GTE code from PCSX-Revolution project