@@ -503,93 +503,6 @@ int LoadSPUplugin(char *SPUdll) {
 void *hPAD1Driver = NULL;
 void *hPAD2Driver = NULL;
 
-static unsigned char buf[256];
-unsigned char stdpar[10] = { 0x00, 0x41, 0x5a, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff };
-unsigned char mousepar[8] = { 0x00, 0x12, 0x5a, 0xff, 0xff, 0xff, 0xff };
-unsigned char analogpar[9] = { 0x00, 0xff, 0x5a, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff };
-
-static int bufcount, bufc;
-
-PadDataS padd1, padd2;
-
-unsigned char _PADstartPoll(PadDataS *pad) {
-	bufc = 0;
-
-	switch (pad->controllerType) {
-		case PSE_PAD_TYPE_MOUSE:
-			mousepar[3] = pad->buttonStatus & 0xff;
-			mousepar[4] = pad->buttonStatus >> 8;
-			mousepar[5] = pad->moveX;
-			mousepar[6] = pad->moveY;
-
-			memcpy(buf, mousepar, 7);
-			bufcount = 6;
-			break;
-		case PSE_PAD_TYPE_NEGCON: // npc101/npc104(slph00001/slph00069)
-			analogpar[1] = 0x23;
-			analogpar[3] = pad->buttonStatus & 0xff;
-			analogpar[4] = pad->buttonStatus >> 8;
-			analogpar[5] = pad->rightJoyX;
-			analogpar[6] = pad->rightJoyY;
-			analogpar[7] = pad->leftJoyX;
-			analogpar[8] = pad->leftJoyY;
-
-			memcpy(buf, analogpar, 9);
-			bufcount = 8;
-			break;
-		case PSE_PAD_TYPE_ANALOGPAD: // scph1150
-			analogpar[1] = 0x73;
-			analogpar[3] = pad->buttonStatus & 0xff;
-			analogpar[4] = pad->buttonStatus >> 8;
-			analogpar[5] = pad->rightJoyX;
-			analogpar[6] = pad->rightJoyY;
-			analogpar[7] = pad->leftJoyX;
-			analogpar[8] = pad->leftJoyY;
-
-			memcpy(buf, analogpar, 9);
-			bufcount = 8;
-			break;
-		case PSE_PAD_TYPE_ANALOGJOY: // scph1110
-			analogpar[1] = 0x53;
-			analogpar[3] = pad->buttonStatus & 0xff;
-			analogpar[4] = pad->buttonStatus >> 8;
-			analogpar[5] = pad->rightJoyX;
-			analogpar[6] = pad->rightJoyY;
-			analogpar[7] = pad->leftJoyX;
-			analogpar[8] = pad->leftJoyY;
-
-			memcpy(buf, analogpar, 9);
-			bufcount = 8;
-			break;
-		case PSE_PAD_TYPE_STANDARD:
-		default:
-			stdpar[3] = pad->buttonStatus & 0xff;
-			stdpar[4] = pad->buttonStatus >> 8;
-
-			memcpy(buf, stdpar, 5);
-			bufcount = 4;
-	}
-
-	return buf[bufc++];
-}
-
-unsigned char _PADpoll(unsigned char value) {
-	if (bufc > bufcount) return 0;
-	return buf[bufc++];
-}
-
-unsigned char CALLBACK PAD1__startPoll(int pad) {
-	PadDataS padd;
-
-	PAD1_readPort1(&padd);
-
-	return _PADstartPoll(&padd);
-}
-
-unsigned char CALLBACK PAD1__poll(unsigned char value) {
-	return _PADpoll(value);
-}
-
 long CALLBACK PAD1__configure(void) { return 0; }
 void CALLBACK PAD1__about(void) {}
 long CALLBACK PAD1__test(void) { return 0; }
@@ -620,28 +533,15 @@ int LoadPAD1plugin(char *PAD1dll) {
 	LoadPad1Sym1(open, "PADopen");
 	LoadPad1Sym1(close, "PADclose");
 	LoadPad1Sym0(query, "PADquery");
-	LoadPad1Sym1(readPort1, "PADreadPort1");
 	LoadPad1Sym0(configure, "PADconfigure");
 	LoadPad1Sym0(test, "PADtest");
 	LoadPad1Sym0(about, "PADabout");
 	LoadPad1Sym0(keypressed, "PADkeypressed");
-	LoadPad1Sym0(startPoll, "PADstartPoll");
-	LoadPad1Sym0(poll, "PADpoll");
+	LoadPad1Sym1(startPoll, "PADstartPoll");
+	LoadPad1Sym1(poll, "PADpoll");
 	LoadPad1SymN(setSensitive, "PADsetSensitive");
 
 	return 0;
-}
-
-unsigned char CALLBACK PAD2__startPoll(int pad) {
-	PadDataS padd;
-
-	PAD2_readPort2(&padd);
-	
-	return _PADstartPoll(&padd);
-}
-
-unsigned char CALLBACK PAD2__poll(unsigned char value) {
-	return _PADpoll(value);
 }
 
 long CALLBACK PAD2__configure(void) { return 0; }
@@ -674,13 +574,12 @@ int LoadPAD2plugin(char *PAD2dll) {
 	LoadPad2Sym1(open, "PADopen");
 	LoadPad2Sym1(close, "PADclose");
 	LoadPad2Sym0(query, "PADquery");
-	LoadPad2Sym1(readPort2, "PADreadPort2");
 	LoadPad2Sym0(configure, "PADconfigure");
 	LoadPad2Sym0(test, "PADtest");
 	LoadPad2Sym0(about, "PADabout");
 	LoadPad2Sym0(keypressed, "PADkeypressed");
-	LoadPad2Sym0(startPoll, "PADstartPoll");
-	LoadPad2Sym0(poll, "PADpoll");
+	LoadPad2Sym1(startPoll, "PADstartPoll");
+	LoadPad2Sym1(poll, "PADpoll");
 	LoadPad2SymN(setSensitive, "PADsetSensitive");
 
 	return 0;
